--- a/app/styles/less/home-blocks.less
+++ b/app/styles/less/home-blocks.less
@@ -1,9 +1,12 @@
 section.home-blocks {
 	position:relative;
+	font-size:0.8em;
 	.block-swarm-tactics {
 		background:white;
 		padding-top:5rem;
 		padding-bottom:5rem;
+		padding-left:1rem;
+		padding-right:1rem;
 		.column {
 			height:100%;
 		}
@@ -47,6 +50,8 @@ section.home-blocks {
 		padding-top:5rem;
 		padding-bottom:5rem;
 		color:@primary-color;
+		padding-left:1rem;
+		padding-right:1rem;
 		.column {
 			height:100%;
 		}
@@ -81,22 +86,28 @@ section.home-blocks {
 		background-size:cover;
 		background-position:center;
 		width:100%;
-		padding-top:5rem;
-		padding-bottom:5rem;
+		//padding-top:5rem;
+		//padding-bottom:5rem;
 		//height:20rem;
 		//position:relative;
 		//z-index:103;
 		.column {
 			height:100%;
+			background:rgba(0, 0, 0, 0.6);
+			padding-top:5rem;
+			padding-bottom:5rem;
+			padding-left:1rem;
+			padding-right:1rem;
 		}
-		.collab-darken {
-			width:100%;
+		/*.collab-darken {
+			//width:100%;
 			height:100%;
 			position:absolute;
-			background-color:black;
+			background-color:rgba(0, 0, 0, 0.5);
 			opacity:0.5;
 			z-index:-1;
-		}
+			top:0;
+		}*/
 		.text-and-button {
 			p {
 				color:white;
@@ -128,12 +139,14 @@ section.home-blocks {
 		padding-top:2rem;
 		padding-bottom:2rem;
 		color:white;
+		padding-left:1rem;
+		padding-right:1rem;
 		.column {
 			height:100%;
 		}
 		.text-and-button {
 			p, button {
-				display:inline;
+				display:inline-block;
 			}
 			p {
 				font-family:@primary-font-reg;
@@ -146,11 +159,10 @@ section.home-blocks {
 				font-size:1.4em;
 				text-transform:uppercase;
 				width:15rem;
-				height:4rem;
+				height:5rem;
 				border:2px solid white;
 				background:none;
-				//margin-top:2rem;
-				margin-left:2rem;
+				//margin-left:2rem;
 				&:hover {
 					background:white;
 					border-color:@primary-color;
