--- a/app/styles/less/home-header.less
+++ b/app/styles/less/home-header.less
@@ -16,6 +16,11 @@ html, body {
 ////////////
 
 header.home-header {
+	background:url('../../images/bridge.jpg');
+	background-size:cover;
+	background-position:center;
+	width:100%;
+	height:100vh;
 	z-index:-100;
 	.home-header-bg {
 		background-color:@home-header-bg-color;
@@ -48,7 +53,7 @@ header.home-header {
 	.home-header-text {
 		color:white;
 		h1 {
-			font-size:3.3em;
+			font-size:4.7em;
 			margin:0;
 			font-family:@logo-font;
 			font-weight:normal;
@@ -56,16 +61,17 @@ header.home-header {
 		p.tagline {
 			text-transform:uppercase;
 			font-family:@primary-font-reg;
-			font-size:1.2em;
-			margin-top:-1.4rem;
-			margin-left:12.2rem;
+			font-size:0.8em;
+			margin-top:-1.2rem;
+			margin-left:8rem;
 		}
 	}
 }
 .plug-and-socket {
 	position:fixed;
 	left:0;
-	top:7rem;
+	top:3rem;
+	left:-1.5rem;
 	//display:none;
 	.socket {
 		margin-left:2rem;
