--- a/app/styles/less/home-process.less
+++ b/app/styles/less/home-process.less
@@ -144,7 +144,12 @@
 	height:100vh;
 	position:relative;
 	z-index:103;
-	text-align:center;
+	padding-left:1rem;
+	padding-right:1rem;
+	//text-align:center;
+	.column {
+		height:100%;
+	}
 	.darken {
 		width:100%;
 		height:100%;
@@ -152,12 +157,13 @@
 		background-color:black;
 		opacity:1;
 		z-index:-1;
+		top:0;
 	}
-	h3 {
+	p {
 		color:white;
 		font-family:@primary-font-bold;
 		text-transform:uppercase;
-		margin:0;
+		margin-top:10rem;
 		font-size:2.5em;
 		//vertical-align:middle;
 		//line-height:100vh;
