--- a/app/styles/less/media-queries-home-header.less
+++ b/app/styles/less/media-queries-home-header.less
@@ -10,8 +10,47 @@
 				font-size:7em;
 			}
 			p.tagline {
-				//font-size:1.2em;
+				font-size:1.2em;
+				margin-left:12.2rem;
+				margin-top:-1.4rem;
 			}
 		}
+	}
+	.office-img {
+		p {
+			margin:0;
+		}
+	}
+}
+@media screen and (min-width: 30rem) {
+	.plug-and-socket {
+		top:5.7rem;
+	}
+}
+@media screen and (min-width: 40rem) {
+	.header-text-and-logo {
+		.home-header-text {
+			h1 {
+				font-size:5.5em;
+			}
+			p.tagline {
+				font-size:1em;
+				margin-top:-1.2rem;
+				margin-left:9.3rem;
+			}
+		}
+	}
+	.block-contact {
+		button {
+			margin-left:2rem;
+		}
+	}
+	.office-img {
+		p {
+			margin-top:13rem;
+		}
+	}
+	section.home-blocks {
+		font-size:1em;
 	}
 }
