--- a/app/styles/less/media-queries-navbar.less
+++ b/app/styles/less/media-queries-navbar.less
@@ -12,6 +12,20 @@
 					line-height:5rem;
 					height:5rem;
 					margin-left:0.4rem;
+					padding-left:3rem;
+					padding-right:3rem;
+				}
+			}
+		}
+	}
+}
+@media screen and (min-width: 51rem) {
+	nav {
+		ul {
+			li {
+				a {
+					padding-left:4rem;
+					padding-right:4rem;
 				}
 			}
 		}
