--- a/app/styles/less/home-process.less
+++ b/app/styles/less/home-process.less
@@ -54,6 +54,7 @@
 	color:white;
 	.box {
 		width:30%;
+		min-width:15rem;
 		//height:10rem;
 		background:@secondary-color;
 		margin:0 auto;
@@ -144,8 +145,8 @@
 	height:100vh;
 	position:relative;
 	z-index:103;
-	padding-left:1rem;
-	padding-right:1rem;
+	//padding-left:1rem;
+	//padding-right:1rem;
 	//text-align:center;
 	.column {
 		height:100%;
