--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -12,4 +12,5 @@
 @import "variables";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
+@import "media-queries-home-process";
 @import "keyframes";
