--- a/app/styles/less/navbar.less
+++ b/app/styles/less/navbar.less
@@ -12,6 +12,21 @@ nav {
 			height:2.5rem;
 		}
 	}*/
+	a#home-icon {
+		display:none;
+		float:left;
+		max-width: 2rem;
+		max-height:2rem;
+		min-width:2rem;
+		min-height:2rem;
+		margin-top:-2.3rem;
+		margin-left:0.5rem;
+		.icon-nudge;
+		&:hover {
+			margin-left:1rem;
+			background:transparent;
+		}
+	}
 	ul {
 		padding: 0;
 		margin-top:0;
