--- a/app/styles/less/mixins.less
+++ b/app/styles/less/mixins.less
@@ -67,3 +67,10 @@
 	-ms-animation: scrolldown 0.8s ease-in-out infinite;
 	animation: scrolldown 0.8s ease-in-out infinite; 
 }
+.block-button-transition {
+	-webkit-transition: background 0.2s, border-color 0.2s, color 0.2s;
+	transition: background 0.2s, border-color 0.2s, color 0.2s;
+	-moz-transition: background 0.2s, border-color 0.2s, color 0.2s;
+	-o-transition: background 0.2s, border-color 0.2s, color 0.2s;
+	-ms-transition: background 0.2s, border-color 0.2s, color 0.2s;
+}
