added content to showcase page

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -1,4 +1,5 @@
 @import "grid";
+@import "variables";
 @import "mixins";
 @import "navbar";
 @import "home-header";
@@ -7,10 +8,12 @@
 @import "home-blocks";
 @import "about-header";
 @import "about-about-us";
+@import "showcase-header";
 @import "case-studies";
 @import "footer";
-@import "variables";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
 @import "media-queries-home-process";
+@import "media-queries-showcase-intro";
 @import "keyframes";
+@import "modernizr";
