--- a/app/styles/less/case-studies.less
+++ b/app/styles/less/case-studies.less
@@ -1,11 +1,12 @@
-h2 {
-    color:white;
-}
 .bl-main {
-    position: absolute;
+    position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
+    h3 {
+        color:white;
+        font-family:@primary-font-reg;
+    }
     & > section {
         position: absolute;
         width: 50%;
@@ -26,22 +27,22 @@ h2 {
     & > section:first-child {
         top: 0;
         left: 0;
-        background: #F06060;
+        background: @primary-color;
     }
     & > section:nth-child(2) {
         top: 0;
         left: 50%;
-        background: #FA987D;
+        background: @primary-color - 10;
     }
     & > section:nth-child(3) {
         top: 50%;
         left: 0;
-        background: #72CCA7;
+        background: @primary-color - 20;
     }
     & > section:nth-child(4) {
         top: 50%;
         left: 50%;
-        background: #10A296;
+        background: @primary-color - 30;
     }
     & > section.bl-expand {
         width: 100%;
@@ -53,7 +54,7 @@ h2 {
         z-index: 100;
     }
     & > section:first-child.bl-expand {
-        background: #EE4444;
+        background: #ca5738;
     }
     & > section:nth-child(2).bl-expand {
         background: #F98262;
@@ -95,7 +96,7 @@ h2 {
     -webkit-transition: opacity 0.2s linear 0.5s;
     -moz-transition: opacity 0.2s linear 0.5s;
     transition: opacity 0.2s linear 0.5s;
-    h2 {
+    h3 {
         text-align: center;
         margin: 0;
         padding: 20px;
@@ -159,7 +160,7 @@ h2 {
         font-size: 1.7em;
         line-height: 1.8;
     }
-    h2 {
+    h3 {
         font-size: 3em;
         font-weight: 300;
         margin: 0 0 20px 0;
@@ -313,7 +314,7 @@ section.bl-expand {
 .no-touch {
     section:not(.bl-expand) {
         .bl-box:hover {
-            h2 {
+            h3 {
                 -webkit-transform: translateY(-15px);
                 -moz-transform: translateY(-15px);
                 -ms-transform: translateY(-15px);
