cleaned up less files a bit, added services page

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -9,7 +9,10 @@
 @import "about-header";
 @import "about-about-us";
 @import "showcase-header";
-@import "case-studies";
+@import "showcase-intro";
+@import "showcase-blocks";
+@import "showcase-case-studies";
+@import "services-header";
 @import "footer";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
