--- a/app/styles/less/services-header.less
+++ b/app/styles/less/services-header.less
@@ -1,11 +1,11 @@
-header.showcase-header {
+header.services-header {
 	z-index:-1;
 	background:url(../../images/pencils.jpg);
 	background-size:cover;
 	background-position:center;
 	width:100%;
 	height:100vh;
-	.showcase-header-bg {
+	.services-header-bg {
 		position:absolute;
 		top:0;
 		height:100vh;
@@ -14,7 +14,7 @@ header.showcase-header {
 		opacity:0.5;
 	}
 }
-.showcase-header-text {
+.services-header-text {
 	width:100%;
 	top:40vh;
 	color:white;
