--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -1373,6 +1373,38 @@ section.bl-expand .bl-icon-close {
     width: 40%;
   }
 }
+header.services-header {
+  z-index: -1;
+  background: url(../../images/pencils.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+}
+header.services-header .services-header-bg {
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  background: black;
+  opacity: 0.5;
+}
+.services-header-text {
+  width: 100%;
+  top: 40vh;
+  color: white;
+  z-index: -1;
+}
+.services-header-text h1 {
+  font-size: 7em;
+  margin: 0;
+  font-family: 'baufrabold';
+  text-transform: uppercase;
+}
+.services-header-text p {
+  font-family: 'baufraregular';
+  text-transform: uppercase;
+}
 section.footer {
   height: 20rem;
   background: white;
