added all sections to about page

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -7,7 +7,11 @@
 @import "home-process";
 @import "home-blocks";
 @import "about-header";
-@import "about-about-us";
+@import "about-intro";
+@import "about-blocks";
+@import "about-why-we-do-it";
+@import "about-our-vision";
+@import "about-team";
 @import "showcase-header";
 @import "showcase-intro";
 @import "showcase-blocks";
@@ -18,5 +22,8 @@
 @import "media-queries-home-header";
 @import "media-queries-home-process";
 @import "media-queries-showcase-intro";
+@import "media-queries-about-intro";
+@import "media-queries-about-blocks";
+@import "media-queries-about-why-and-vision";
 @import "keyframes";
 @import "modernizr";
