--- a/app/styles/less/media-queries-navbar.less
+++ b/app/styles/less/media-queries-navbar.less
@@ -20,6 +20,16 @@
 			}
 		}
 	}
+	nav.nav-reduced {
+		height:2.5rem;
+		li a {
+			line-height:2.5rem;
+			height:2.5rem;
+		}
+		#home-icon {
+			display:block;
+		}
+	}
 }
 @media screen and (min-width: 51rem) {
 	nav {
