--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -168,6 +168,7 @@ nav a#home-icon {
   min-height: 2rem;
   margin-top: -2.3rem;
   margin-left: 0.5rem;
+  background: transparent;
   -webkit-transition: margin-left 0.3s;
   transition: margin-left 0.3s;
   -moz-transition: margin-left 0.3s;
@@ -176,7 +177,6 @@ nav a#home-icon {
 }
 nav a#home-icon:hover {
   margin-left: 1rem;
-  background: transparent;
 }
 nav ul {
   padding: 0;
@@ -879,24 +879,226 @@ header.about-header {
   font-family: 'baufrabold';
   text-transform: uppercase;
 }
+section.about-intro {
+  background: white;
+  padding-bottom: 3rem;
+  font-family: 'cabrito_norm_regularnormRg';
+}
+section.about-intro .column.half {
+  padding: 3rem;
+}
+section.about-intro .column.half:nth-child(2) {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+section.about-intro h3 {
+  font-size: 2em;
+  font-weight: normal;
+  color: black;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+section.about-intro hr {
+  width: 20%;
+  border: 1px solid black;
+}
+section.about-intro i {
+  font-size: 2em;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 0;
+}
+section.about-intro p {
+  color: #646464;
+  margin: 0;
+}
+section.about-intro .column.full {
+  padding: 3rem;
+}
+section.about-intro .column.full p {
+  font-size: 1.2em;
+}
 .block-work-better {
   background: #e74c3c;
-  height: 20rem;
+  width: 100%;
+}
+.block-work-better .column {
+  height: 100%;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .block-work-better p {
   font-family: 'baufraregular';
-  font-size: 2.4em;
+  font-size: 2em;
   text-transform: uppercase;
   color: white;
-  vertical-align: center;
-  line-height: 20rem;
   margin: 0;
 }
-section.about-us {
+.block-why-we-do-it {
+  background: url('../../images/pen.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+}
+.block-why-we-do-it .column {
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.block-why-we-do-it h2 {
+  color: white;
+  font-family: 'baufrabold';
+  font-size: 2.5em;
+  text-transform: uppercase;
+  margin: 0;
+}
+.block-why-we-do-it p {
+  color: white;
+  font-family: 'baufraregular';
+  text-transform: uppercase;
+}
+.block-our-vision {
+  background: url('../../images/pen.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+}
+.block-our-vision .column {
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.block-our-vision h2 {
+  color: white;
+  font-family: 'baufrabold';
+  font-size: 2.5em;
+  text-transform: uppercase;
+  margin: 0;
+}
+.block-our-vision p {
+  color: white;
+  font-family: 'baufraregular';
+  text-transform: uppercase;
+}
+.block-team {
+  background: url('../../images/pen.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+}
+.block-team .column {
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.block-team h2 {
+  color: white;
+  font-family: 'baufrabold';
+  font-size: 2.5em;
+  text-transform: uppercase;
+  margin: 0;
+}
+.block-team p {
+  color: white;
+  font-family: 'baufraregular';
+  text-transform: uppercase;
+}
+section.why-we-do-it .content {
   background: white;
-  padding: 5rem;
+  padding: 3rem;
+}
+section.why-we-do-it .content p {
   font-family: 'cabrito_norm_regularnormRg';
+  color: #646464;
+}
+section.why-we-do-it .content .column.full.text-center p {
+  color: black;
   font-size: 1.5em;
+}
+section.our-vision .content {
+  background: white;
+  padding: 3rem;
+  font-family: 'cabrito_norm_regularnormRg';
+}
+section.our-vision .content ul {
+  color: #646464;
+}
+section.our-vision .content ul li {
+  line-height: 2em;
+}
+section.our-vision .content .column.full.text-center p {
+  color: black;
+  font-size: 1.5em;
+}
+section.team {
+  background: white;
+}
+section.team .in-house-team {
+  padding: 3rem;
+}
+section.team .in-house-team h3 {
+  color: black;
+  font-family: 'baufrabold';
+  text-transform: uppercase;
+  font-size: 2em;
+}
+section.team .in-house-team hr {
+  width: 20%;
+  border: 1px solid #646464;
+}
+section.team .in-house-team .team-members .team-member {
+  display: inline-block;
+  padding: 2rem;
+}
+section.team .freelancers {
+  padding: 3rem;
+  padding-top: 0;
+}
+section.team .freelancers h3 {
+  color: black;
+  font-family: 'baufrabold';
+  text-transform: uppercase;
+  font-size: 2em;
+}
+section.team .freelancers hr {
+  width: 20%;
+  border: 1px solid #646464;
+}
+section.team .freelancers .team-members-row .team-member {
+  display: inline-block;
+  padding: 2rem;
+}
+section.team .team-member {
+  position: relative;
+  overflow: hidden;
+}
+section.team .team-member-overlay {
+  background: #e74c3c;
+  height: 100px;
+  position: absolute;
+  width: 200px;
+  top: 100%;
+  padding: 1rem;
+}
+section.team .team-member-overlay p {
+  color: white;
+  font-family: 'baufraregular';
+  text-transform: uppercase;
+}
+section.team .team-member-overlay .overlay-up {
+  top: 50%;
 }
 header.showcase-header {
   z-index: -1;
@@ -1436,6 +1638,16 @@ section.footer p {
     padding-left: 3rem;
     padding-right: 3rem;
   }
+  nav.nav-reduced {
+    height: 2.5rem;
+  }
+  nav.nav-reduced li a {
+    line-height: 2.5rem;
+    height: 2.5rem;
+  }
+  nav.nav-reduced #home-icon {
+    display: block;
+  }
 }
 @media screen and (min-width: 51rem) {
   nav ul li a {
@@ -1611,6 +1823,69 @@ section.footer p {
   .showcase-intro .column.half:nth-child(2) {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+}
+@media screen and (min-width: 40rem) {
+  section.about-intro {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+  section.about-intro .column.half:nth-child(2) {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+  section.about-intro i {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  section.about-intro .column.full {
+    padding-top: 1rem;
+  }
+}
+@media screen and (min-width: 58rem) {
+  section.about-intro i {
+    font-size: 3em;
+    padding-top: 2rem;
+  }
+}
+@media screen and (min-width: 40rem) {
+  .block-why-we-do-it h2 {
+    font-size: 3em;
+  }
+  .block-our-vision h2 {
+    font-size: 3em;
+  }
+  .block-team h2 {
+    font-size: 3em;
+  }
+}
+@media screen and (min-width: 48rem) {
+  .block-why-we-do-it h2 {
+    font-size: 4em;
+  }
+  .block-our-vision h2 {
+    font-size: 4em;
+  }
+  .block-team h2 {
+    font-size: 4em;
+  }
+}
+@media screen and (min-width: 40rem) {
+  section.why-we-do-it .content .column.full.text-center p {
+    font-size: 2em;
+  }
+  section.our-vision .content .column.full.text-center p {
+    font-size: 2em;
+  }
+}
+@media screen and (min-width: 58rem) {
+  section.why-we-do-it .content {
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+  section.our-vision .content {
+    padding-left: 7rem;
+    padding-right: 7rem;
   }
 }
 @-webkit-keyframes neon {
