--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -1045,6 +1045,10 @@ section.our-vision .content .column.full.text-center p {
 section.team {
   background: white;
 }
+section.team a {
+  text-decoration: none;
+  color: inherit;
+}
 section.team .in-house-team {
   padding: 3rem;
 }
@@ -1057,10 +1061,6 @@ section.team .in-house-team h3 {
 section.team .in-house-team hr {
   width: 20%;
   border: 1px solid #646464;
-}
-section.team .in-house-team .team-members .team-member {
-  display: inline-block;
-  padding: 2rem;
 }
 section.team .freelancers {
   padding: 3rem;
@@ -1076,13 +1076,12 @@ section.team .freelancers hr {
   width: 20%;
   border: 1px solid #646464;
 }
-section.team .freelancers .team-members-row .team-member {
-  display: inline-block;
-  padding: 2rem;
-}
 section.team .team-member {
   position: relative;
   overflow: hidden;
+  display: inline-block;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 section.team .team-member-overlay {
   background: #e74c3c;
@@ -1091,14 +1090,52 @@ section.team .team-member-overlay {
   width: 200px;
   top: 100%;
   padding: 1rem;
+  text-align: left;
+  opacity: 0.9;
 }
 section.team .team-member-overlay p {
   color: white;
   font-family: 'baufraregular';
   text-transform: uppercase;
 }
-section.team .team-member-overlay .overlay-up {
-  top: 50%;
+section.team .team-member-overlay p:first-child {
+  font-size: 1.2em;
+  margin: 0;
+}
+section.team .lightbox {
+  width: 60vw;
+  position: fixed;
+  z-index: 999;
+  top: 20vh;
+  left: 50%;
+  margin-left: -30vw;
+  background: #e6e6e6;
+  padding: 2rem;
+  border-radius: 4px;
+  color: #646464;
+  display: none;
+}
+section.team .lightbox h3 {
+  font-family: 'baufraregular';
+  text-transform: uppercase;
+  color: black;
+  font-weight: normal;
+  font-size: 1.3em;
+}
+section.team .lightbox p {
+  font-family: 'cabrito_norm_regularnormRg';
+  text-align: left;
+}
+section.team .lightbox .social-links {
+  text-align: right;
+  color: #e74c3c;
+}
+section.team .lightbox .icon-exit {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  font-size: 2em;
+  color: black;
 }
 header.showcase-header {
   z-index: -1;
