--- a/app/styles/less/about-team.less
+++ b/app/styles/less/about-team.less
@@ -1,5 +1,9 @@
 section.team {
 	background:white;
+	a {
+		text-decoration:none;
+		color:inherit;
+	}
 	.in-house-team {
 		padding:3rem;
 		h3 {
@@ -11,12 +15,6 @@ section.team {
 		hr {
 			width:20%;
 			border:1px solid @text-grey;
-		}
-		.team-members {
-			.team-member {
-				display:inline-block;
-				padding:2rem;
-			}
 		}
 	}
 	.freelancers {
@@ -32,16 +30,13 @@ section.team {
 			width:20%;
 			border:1px solid @text-grey;
 		}
-		.team-members-row {
-			.team-member {
-				display:inline-block;
-				padding:2rem;
-			}
-		}
 	}
 	.team-member {
 		position:relative;
 		overflow:hidden;
+		display:inline-block;
+		padding-left:2rem;
+		padding-right:2rem;
 	}
 	.team-member-overlay {
 		background:@primary-color;
@@ -50,13 +45,51 @@ section.team {
 		width:200px;
 		top:100%;
 		padding:1rem;
+		text-align:left;
+		opacity:0.9;
 		p {
 			color:white;
 			font-family:@primary-font-reg;
 			text-transform:uppercase;
+			&:first-child {
+				font-size:1.2em;
+				margin:0;
+			}
 		}
-		.overlay-up {
-			top:50%;
+	}
+	.lightbox {
+		width:60vw;
+		position:fixed;
+		z-index:999;
+		top:20vh;
+		left:50%;
+		margin-left:-30vw;
+		background:@text-grey + 130;
+		padding:2rem;
+		border-radius:4px;
+		color:@text-grey;
+		display:none;
+		h3 {
+			font-family:@primary-font-reg;
+			text-transform:uppercase;
+			color:black;
+			font-weight:normal;
+			font-size:1.3em;
+		}
+		p {
+			font-family:@secondary-font;
+			text-align:left;
+		}
+		.social-links {
+			text-align:right;
+			color:@primary-color;
+		}
+		.icon-exit {
+			position:absolute;
+			top:0.5rem;
+			right:0.5rem;
+			font-size:2em;
+			color:black;
 		}
 	}
 }
