--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -25,5 +25,6 @@
 @import "media-queries-about-intro";
 @import "media-queries-about-blocks";
 @import "media-queries-about-why-and-vision";
+@import "media-queries-about-team";
 @import "keyframes";
 @import "modernizr";
