--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -17,6 +17,8 @@
 @import "showcase-blocks";
 @import "showcase-case-studies";
 @import "services-header";
+@import "connect-header";
+@import "connect-contact";
 @import "footer";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
