--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -17,6 +17,7 @@
 @import "showcase-blocks";
 @import "showcase-case-studies";
 @import "services-header";
+@import "services-blocks";
 @import "connect-header";
 @import "connect-contact";
 @import "footer";
@@ -28,5 +29,6 @@
 @import "media-queries-about-blocks";
 @import "media-queries-about-why-and-vision";
 @import "media-queries-about-team";
+@import "media-queries-services-blocks";
 @import "keyframes";
 @import "modernizr";
