--- a/app/styles/less/media-queries-home-header.less
+++ b/app/styles/less/media-queries-home-header.less
@@ -1,30 +1,6 @@
-@media screen and (min-width: 48rem) {
-	.header-text-and-logo {
-		.svg-icon {
-			width: 50%;
-			max-height:10rem;
-			max-width:10rem;
-		}
-		.home-header-text {
-			h1 {
-				font-size:7em;
-			}
-			p.tagline {
-				font-size:1.2em;
-				margin-left:12.2rem;
-				margin-top:-1.4rem;
-			}
-		}
-	}
-	.office-img {
-		p {
-			margin:0;
-		}
-	}
-}
 @media screen and (min-width: 30rem) {
 	.plug-and-socket {
-		top:5.7rem;
+		top:8.2rem;
 	}
 }
 @media screen and (min-width: 40rem) {
@@ -52,5 +28,33 @@
 	}
 	section.home-blocks {
 		font-size:1em;
+	}
+}
+@media screen and (min-width: 48rem) {
+	.header-text-and-logo {
+		.svg-icon {
+			width: 50%;
+			max-height:10rem;
+			max-width:10rem;
+		}
+		.home-header-text {
+			margin-top:-1.5rem;
+			h1 {
+				font-size:7em;
+			}
+			p.tagline {
+				font-size:1.2em;
+				margin-left:12.2rem;
+				margin-top:-1.4rem;
+			}
+		}
+	}
+	.office-img {
+		p {
+			margin:0;
+		}
+	}
+	.plug-and-socket {
+		top:5.7rem;
 	}
 }
