--- a/app/styles/less/media-queries-navbar.less
+++ b/app/styles/less/media-queries-navbar.less
@@ -1,3 +1,5 @@
+
+
 @media screen and (min-width: 48rem) {
 	nav {
 		height:5rem;
@@ -14,8 +16,8 @@
 					line-height:5rem;
 					height:5rem;
 					margin-left:0.4rem;
-					padding-left:3rem;
-					padding-right:3rem;
+					padding-left:2rem;
+					padding-right:2rem;
 				}
 			}
 		}
@@ -31,13 +33,13 @@
 		}
 	}
 }
-@media screen and (min-width: 51rem) {
+@media screen and (min-width: 56rem) {
 	nav {
 		ul {
 			li {
 				a {
-					padding-left:4rem;
-					padding-right:4rem;
+					padding-left:3rem;
+					padding-right:3rem;
 				}
 			}
 		}
@@ -61,7 +63,7 @@
 		ul {
 			li {
 				&:first-child {
-					width:100%;
+					//width:100%;
 				}
 			}
 		}
@@ -76,10 +78,11 @@
 	  		height: auto;
 		}
 		li {
-			width: 50%;
+			width: 33.3%;
   			float: left;
   			position: relative;
   			border-right:0;
+  			
   			a {
   				border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 				border-right: 1px solid rgba(255, 255, 255, 0.1);
